--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -2,52 +2,143 @@
 {% block content %}
 <div style="padding:20px; display:flex; justify-content:center; flex-direction:column">
     <div style="display:flex; flex-direction:row; justify-content: space-between;" >
-    <h2>Workers List</h2>
-    <form action="{{url_for('panel.index')}}" method='get'>
-        <button type="submit" class="btn btn-primary">PANEL</button>
-    </form>
+    <h2>Workers</h2>
+        <h3 class="text-success">Worker Pool Size: {{worker_pool_size}} </h3>
+        <form action="{{url_for('panel.index')}}" method='get'>
+            <button type="submit" class="btn btn-primary">PANEL</button>
+        </form>
     </div>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">PUBLIC IP</th>
-                <th scope="col">Type</th>
-                <th scope="col">Availability Zone</th>
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" id="listtab" data-toggle="tab" href="#list" onclick="return showList()">List</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="charttab" data-toggle="tab" href="#chart" onclick="return showChart()">Chart</a>
+        </li>
+    </ul>
+    <div id="myTabContent" class="tab-content">
+        <div class="tab-pane fade active show" id="list">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">PUBLIC IP</th>
+                        <th scope="col">Type</th>
+                        <th scope="col">Availability Zone</th>
 
-                <th scope="col">Status</th>
-            </tr>
-        </thead>
-        {% for instance in instances %}
-        <tr>
-            <td>{{ instance.id }}</td>
-            <td>{{ instance.public_ip_address }}</td>
-            <td>{{ instance.instance_type }}</td>
-            <td>{{ instance.placement['AvailabilityZone']}}</td>
-            <td>{{ instance.state['Name'] }}</td>
-            <td>
-                {% if instance.state['Name'] == 'pending' or instance.state['Name'] == 'shutting-down' or instance.state['Name'] == 'terminated'%}
-                    <button type="submit" class="btn btn-sm btn-primary disabled">Detail</button>
-                {% else %}
-                <form action="{{url_for('worker.worker_view',id=instance.id)}}" method='get'>
-                    <button type="submit" class="btn btn-sm btn-info">Detail</button>
-                </form>
-                {% endif %}
-                
-            </td>
-            <td>
-                {% if instance.state['Name'] == 'terminated' or instance.state['Name'] == 'shutting-down' %}
-                    <button type="submit" class="btn btn-sm btn-primary disabled">Delete</button>
-                {% else %}
-                <form action="{{url_for('worker.delete_worker',id=instance.id)}}" method='post'>
-                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                </form>
-                {% endif %}
-            </td>
-        </tr>
-        {% endfor %}
-    </table>
+                        <th scope="col">Status</th>
+                        <th scope="col">In Service</th>
+                    </tr>
+                </thead>
+                {% for instance in instances %}
+                {% if instance['inservice']== 'Yes' %}
+                <tr class="table-success">
+                    {% else %}
+                <tr>
+                    {% endif %}
+                    <td>{{ instance['id'] }}</td>
+                    <td>{{ instance['public_ip_address'] }}</td>
+                    <td>{{ instance['instance_type'] }}</td>
+                    <td>{{ instance['availability_zone'] }}</td>
+                    <td>{{ instance['state'] }}</td>
+                    <td>{{ instance['inservice'] }}</td>
+                    <td>
+                        {% if instance.state['Name'] == 'pending' or instance.state['Name'] == 'shutting-down' or instance.state['Name'] == 'terminated'%}
+                        <button type="submit" class="btn btn-sm btn-primary disabled">Detail</button>
+                        {% else %}
+                        <form action="{{url_for('worker.worker_view',id=instance.id)}}" method='get'>
+                            <button type="submit" class="btn btn-sm btn-info">Detail</button>
+                        </form>
+                        {% endif %}
+
+                    </td>
+                    <td>
+                        {% if instance.state['Name'] == 'terminated' or instance.state['Name'] == 'shutting-down' %}
+                        <button type="submit" class="btn btn-sm btn-primary disabled">Delete</button>
+                        {% else %}
+                        <form action="{{url_for('worker.delete_worker',id=instance.id)}}" method='post'>
+                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                        {% endif %}
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <div class="tab-pane fade" id="chart">
+            <div class="card border-primary">
+                <div class="card-header">WORKER NUMBER IN LAST 30 MINUTES</div>
+                <div class="card-body" style="display:flex; justify-content:center;">
+                    <canvas id="workerchart" width="1000" height="500"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
+<script>
+    
+    function showList() {
+        document.getElementById("list").className = "tab-pane fade active show";
+        document.getElementById("listtab").className = "nav-link active";
+        document.getElementById("charttab").className = "nav-link";
+    }
+    function showChart() {
+        document.getElementById("chart").className = "tab-pane fade active show";
+        document.getElementById("charttab").className = "nav-link active";
+        document.getElementById("listtab").className = "nav-link";
+    }
+
+     var WorkerData = {
+            labels: [
+                {% for item in workerLabels %}
+        "{{ item }}",
+            {% endfor %}
+        ],
+
+        datasets: [{
+            fillColor: "rgba(151,187,205,0.2)",
+            strokeColor: "rgba(151,187,205,1)",
+            pointColor: "rgba(151,187,205,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(151,187,205,1)",
+            bezierCurve: false,
+            data: [
+                {% for item in workerValues %}
+              {{ item }},
+        {% endfor %}]
+          }
+	]
+      }
+
+        Chart.defaults.global.animationSteps = 50;
+        Chart.defaults.global.tooltipYPadding = 16;
+        Chart.defaults.global.tooltipCornerRadius = 0;
+        Chart.defaults.global.tooltipTitleFontStyle = "normal";
+        Chart.defaults.global.tooltipFillColor = "rgba(0,0,0,0.8)";
+        Chart.defaults.global.animationEasing = "easeOutBounce";
+        Chart.defaults.global.responsive = false;
+        Chart.defaults.global.scaleLineColor = "black";
+        Chart.defaults.global.scaleFontSize = 16;
+
+        // get bar chart canvas
+        var WorkerChart = document.getElementById("workerchart").getContext("2d");
+
+        max = {{ workerMax }} + 1
+        // draw bar chart
+        var LineChartDemo = new Chart(WorkerChart).Line(WorkerData, {
+            scaleOverride: true,
+            scaleSteps: 1,
+            scaleStepWidth: max,
+            scaleStartValue: 0,
+            scaleShowVerticalLines: true,
+            scaleShowGridLines: true,
+            barShowStroke: true,
+            scaleShowLabels: true,
+            bezierCurve: false,
+        });
+</script>
 
 {% endblock %}
