--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -111,7 +111,7 @@
         // draw bar chart
         var LineChartDemo = new Chart(WorkerChart).Line(WorkerData, {
             scaleOverride: true,
-            scaleSteps: max/10,
+            scaleSteps: 1,
             scaleStepWidth: max,
             scaleStartValue: 0,
             scaleShowVerticalLines: true,
