--- a/src/templates/panel.html
+++ b/src/templates/panel.html
@@ -26,6 +26,13 @@
             aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
         {% endif %}
     </div>
+    <div style="margin-top: 15px">
+        {% if num_serving_instance != 0 %}
+        <h5>Average CPU UTILIZATION OF WORKERS (last 2 minutes): {{ avg_cpu_util }}</h5>
+        {% else %}
+        <h5>Average CPU UTILIZATION OF WORKERS (last 2 minutes): -- </h5>
+        {% endif %}
+    </div>
     <div style="display: flex; flex-direction:column; justify-content: center; padding: 50px">
         <div class="jumbotron">
             <div style="display: flex; flex-direction:row; justify-content: space-evenly; padding: 30px;">
