--- a/src/templates/manualscaling.html
+++ b/src/templates/manualscaling.html
@@ -5,6 +5,9 @@
         <form action="{{url_for('panel.index')}}" method='get'>
             <button type="submit" class="btn btn-primary">PANEL</button>
         </form>
+        <form action="{{url_for('panel.list_workers')}}" method='get'>
+            <button type="submit" class="btn btn-primary">WORKER LIST</button>
+        </form>
     </div>
     <div style="display: flex; justify-content: center; padding-top: 100px;">
         <div style="display: flex; flex-direction: column;  align-items: center; padding: 20px">
