--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div style="margin:30px">
-        <div class="card border-primary">
+        <div class="card border-primary" style="padding: 20px">
             <div class="card-header">WORKER NUMBER IN LAST 30 MINUTES</div>
             <div class="card-body" style="display:flex; justify-content:center;">
                 <canvas id="workerchart" width="600" height="300"></canvas>
