--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -10,16 +10,20 @@
         </div>
     </div>
     <div style="margin:30px">
-        <div class="card border-primary" style="padding: 20px">
-            <div class="card-header">WORKER NUMBER IN LAST 30 MINUTES</div>
-            <div class="card-body" style="display:flex; justify-content:center;">
-                <canvas id="workerchart" width="600" height="300"></canvas>
+        <div style="padding: 10px">
+            <div class="card border-primary">
+                <div class="card-header">WORKER NUMBER IN LAST 30 MINUTES</div>
+                <div class="card-body" style="display:flex; justify-content:center;">
+                    <canvas id="workerchart" width="600" height="300"></canvas>
+                </div>
             </div>
         </div>
-        <div class="card border-primary">
-            <div class="card-header">WORKER AVG CPU IN LAST 30 MINUTES</div>
-            <div class="card-body" style="display:flex; justify-content:center;">
-                <canvas id="avgcpuchart" width="600" height="300"></canvas>
+        <div style="padding: 10px">
+            <div class="card border-primary">
+                <div class="card-header">WORKER AVG CPU IN LAST 30 MINUTES</div>
+                <div class="card-body" style="display:flex; justify-content:center;">
+                    <canvas id="avgcpuchart" width="600" height="300"></canvas>
+                </div>
             </div>
         </div>
         <div style="margin:15px">
