--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -22,7 +22,7 @@
             <td>{{ instance.state['Name'] }}</td>
         </tr>
     </table>
-    <div style="display: flex; flex-direction: row; justify-content: space-evenly">
+    <div style="display: flex; flex-direction: column; justify-content: space-evenly">
         <div class="card border-primary">
             <div class="card-header">CPU UTILIZATION</div>
             <div class="card-body" style="display:flex; justify-content:center;">
