--- a/src/templates/panel.html
+++ b/src/templates/panel.html
@@ -13,7 +13,7 @@
                 <button type="submit" class="btn disabled btn-lg btn-primary">GO TO APPLICATION</button>
             {% endif %}
             <form action="{{url_for('panel.stop_manager')}}" method='post'>
-                <button type="submit" class="btn btn-lg btn-primary">MANUAL SCALING</button>
+                <button type="submit" class="btn btn-lg btn-danger">STOP MANAGER</button>
             </form>
         </div>
         
